<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:text="@string/total_amt"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:layout_marginTop="10dip"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/total_amt"
        android:inputType="number"
        android:layout_width="250dip"
        android:layout_height="50dip"
        android:layout_gravity="center"
        android:textColor="@color/txtColor"
        android:textSize="20dip" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:text="@string/add_usr"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:layout_marginTop="10dip"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/usr_add"
        android:layout_width="250dip"
        android:layout_height="50dip"
        android:layout_gravity="center"
        android:textColor="@color/txtColor"
        android:textSize="20dip" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:text="@string/amount_by_user"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:layout_marginTop="10dip"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/split_amt"
        android:inputType="number"
        android:layout_width="250dip"
        android:layout_height="50dip"
        android:layout_gravity="center"
        android:textColor="@color/txtColor"
        android:textSize="20dip" />
    <Button
        android:id="@+id/add_user_btn"
        android:layout_width="250dip"
        android:layout_height="60dip"
        android:layout_gravity="center"
        android:background="@color/divColor"
        android:text="@string/add_usr_btn"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:alpha="0.8"
        android:layout_marginTop="10dip"
        />
    <Button
        android:id="@+id/transaction_btn"
        android:layout_width="250dip"
        android:layout_height="60dip"
        android:layout_gravity="center"
        android:background="@color/divColor"
        android:text="@string/finalize_transaction"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:alpha="0.8"
        android:layout_marginTop="10dip"
        />
</LinearLayout>