<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    android:orientation="vertical"
    >
    <Button
        android:id="@+id/split_btn"
        android:layout_width="300dip"
        android:layout_height="60dip"
        android:layout_gravity="center"
        android:background="@color/divColor"
        android:text="@string/split"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:alpha="0.8"
        android:layout_marginTop="100dip"
        />
    <Button
        android:id="@+id/check_btn"
        android:layout_width="300dip"
        android:layout_height="60dip"
        android:layout_gravity="center"
        android:background="@color/divColor"
        android:text="@string/check"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:alpha="0.8"
        android:layout_marginTop="50dip"
        />
    <Button
        android:id="@+id/accept_requests"
        android:layout_width="300dip"
        android:layout_height="60dip"
        android:layout_gravity="center"
        android:background="@color/divColor"
        android:text="@string/accpt"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:alpha="0.8"
        android:layout_marginTop="50dip"
        />

</LinearLayout>