<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:text="@string/enter_usrname"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:layout_marginTop="50dip"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="250dip"
        android:layout_height="50dip"
        android:layout_gravity="center"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:id="@+id/reg_user_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:text="@string/enter_password"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:layout_marginTop="50dip"
        android:layout_gravity="center"
        />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/reg_user_pass"
        android:layout_width="250dip"
        android:layout_height="50dip"
        android:layout_gravity="center"
        android:textColor="@color/txtColor"
        android:textSize="20dip" />
    <Button
        android:id="@+id/reg_submit_btn"
        android:layout_width="250dip"
        android:layout_height="60dip"
        android:layout_gravity="center"
        android:background="@color/divColor"
        android:text="@string/submit"
        android:textColor="@color/txtColor"
        android:textSize="20dip"
        android:textStyle="bold"
        android:alpha="0.8"
        android:layout_marginTop="50dip"
        />
</LinearLayout>